@@ -1,3 +1,4 @@
 Changelog Notes:
 Re-enable default free recipes for Ingenuitive in addition to learning all other recipes.
 Fix bug in Quick Worker erroring on TimedWalkActions.
+Fix player Weight reducing for a split second.
